<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!-- android:background="@drawable/bg"> -->

    <TextView
        android:id="@+id/change_password_errorTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="8dp"
        android:text="@string/error_invalid_amount"
        android:textSize="18sp"
        android:gravity="center"
        android:textColor="#FF0000"/>

    <EditText
        android:id="@+id/old_pass_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:hint="@string/old_pass"
        android:gravity="center"
        android:textSize="16sp"
        android:inputType="numberPassword"/>

    <EditText
        android:id="@+id/new_pass_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:hint="@string/new_pass"
        android:gravity="center"
        android:textSize="16sp"
        android:inputType="numberPassword"/>


    <EditText
        android:id="@+id/new_pass_repeat_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:hint="@string/new_pass_repeat"
        android:gravity="center"
        android:textSize="16sp"
        android:inputType="numberPassword"/>

    <Button
        android:id="@+id/change_pass_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_gravity="center"
        android:text="تغییر رمز"
        android:textSize="16sp"
        android:background="@drawable/custom_button"/>


</LinearLayout>