<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!-- android:background="@drawable/bg"> -->

    <TextView
        android:id="@+id/money_transfer_errorTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="8dp"
        android:text="@string/error_invalid_amount"
        android:textSize="18sp"
        android:gravity="center"
        android:textColor="#FF0000"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="34dp"
        android:layout_marginRight="34dp"
        android:layout_marginTop="16dp">

        <TextView
            android:id="@+id/money_transfer_rialTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rial"
            android:layout_weight="6"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/money_transfer_moneyAmtEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:inputType="phone"
            android:textSize="24sp"
            android:gravity="center"
            android:hint="@string/enter_money"
            android:layout_weight="1"/>

    </LinearLayout>


    <EditText
        android:id="@+id/money_transfer_cardNumEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="34dp"
        android:layout_marginLeft="34dp"
        android:layout_marginTop="16dp"
        android:textSize="24sp"
        android:gravity="center"
        android:inputType="phone"
        android:hint="@string/enter_cardnum"/>

    <Button
        android:id="@+id/money_transfer_nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:text="انتقال"
        android:textSize="16sp"
        android:background="@drawable/custom_button"/>

</LinearLayout>

