<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/enter_cardnum_errorTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="8dp"
        android:gravity="center"
        android:text="@string/error_invalid_cardnum"
        android:textSize="22sp"
        android:textColor="#FF0000"/>

    <TextView
        android:id="@+id/enter_cardnum_enterCardTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/enter_cardnum"
        android:textSize="20sp"
        android:gravity="center"/>

    <EditText
        android:id="@+id/money_transfer_cardNumEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:textSize="32sp"
        android:gravity="center"
        android:inputType="phone"/>

    <Button
        android:id="@+id/enter_cardnum_nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:text="@string/next_level"
        android:textSize="16sp"/>



</LinearLayout>